--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -1,5 +1,6 @@
 .home{
 
+
     height: 100vh;
     width: 100vw;
     color: white;
@@ -20,6 +21,9 @@
 
 
 .home-name{
+  
+  /* margin-top: 100px; */
+
     letter-spacing: 1px;
     color: aqua;
     font-weight: bolder;
