--- a/src/Components/Eductaion.css
+++ b/src/Components/Eductaion.css
@@ -1,4 +1,4 @@
-
+/* 
 .about-education{
 
     margin-top: 80px ;
@@ -37,10 +37,9 @@
   }
   
   .a-e-h{
-    /* font-weight: bolder; */
     color: aqua;
     margin-top: 30px ;
     letter-spacing: 2px; 
   
   
-  }
+  } */
