--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -1,18 +1,14 @@
 .home{
-
-
     height: 100vh;
     width: 100vw;
     color: white;
     background-color: black;
-
     text-align: center;
-    
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 25px;
+    /* gap: 25px; */
 
     
   
@@ -103,4 +99,6 @@
     outline: none;  /* Remove the default outline */
     box-shadow: 0 0 5px 2px #6EFDFF;  /* Subtle Aqua glow effect */
 }
+
+
 
